--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,12 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
+    <a class="site-title" href="{{ site.baseurl }}/">
+	    <div class="line-1">made by</div>
+	    <div class="line"></div>
+	    <div class="line-2">Fred</div>
+	  </a>
+	  
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
