--- a/css/main.scss
+++ b/css/main.scss
@@ -49,8 +49,106 @@ $on-laptop:        800px;
 ;
 
 // MBF Custom Styles
-section.home-journal {
-	background-color: orange;
-	color: $grey-color-light;
-	text-align: center;
+header.site-header {
+	background-color: #b0bda2;
+	border: none;
+}
+a.site-title {
+	font-family: "Bitter", serif;
+	font-size: 38px;
+	line-height: 1em;
+	letter-spacing: .02em;
+	text-transform: uppercase;
+	margin: 0 auto;
+	text-decoration: none;
+	&:hover .line {
+	 	width: 0%;
+	 	-webkit-transition: all 500ms ease-out;
+	 	-moz-transition: all 500ms ease-out;
+	 	-o-transition: all 500ms ease-out;
+	 	transition: all 500ms ease-out;	
+	}
+}
+.line-1 {
+	font-family: "Questrial", sans-serif;
+	font-size: 24px;
+	text-transform: lowercase;
+}
+.line {
+	 height:2px;
+	 width:100%;
+	 margin: 0 auto 2px;
+	 background-color: #f76f00;
+	 	-webkit-transition: background-color 500ms ease-in;
+	 	-moz-transition: background-color 500ms ease-in;
+	 	-o-transition: background-color 500ms ease-in;
+	 	transition: background-color 500ms ease-in;
+}
+.page-content {
+	padding: 0;
+	margin: 0;
+}
+div.home {
+	height: 100vh;
+	
+	section {
+		position: relative;
+		color: $grey-color-light;
+		text-align: center;
+		width: 100%;
+		height: 50%;
+		&.journal {
+			background-color: #a2b0bd;
+		}
+		&.project {
+			background-color: #bda2b0;
+		}
+	}
+}
+footer.site-footer {
+	background-color: #a2bdaf;
+	border: none;
+}
+
+a.site-title {
+/*
+    margin-top: 25px;
+    font-size: 21px;
+    text-align: center;
+*/
+
+    -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 3s; /* Firefox < 16 */
+        -ms-animation: fadein 3s; /* Internet Explorer */
+         -o-animation: fadein 3s; /* Opera < 12.1 */
+            animation: fadein 3s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
