--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,9 @@
 ---
 @charset "utf-8";
 
+//Import fonts
+@import url(http://fonts.googleapis.com/css?family=Questrial|Open+Sans:400,300,400italic|Bitter);
+
 
 
 // Our variables
