--- a/css/main (MacBook-Pro's conflicted copy 2014-11-11).scss
+++ b/css/main (MacBook-Pro's conflicted copy 2014-11-11).scss
@@ -3,6 +3,9 @@
 ---
 @charset "utf-8";
 
+//Import fonts
+@import url(http://fonts.googleapis.com/css?family=Questrial|Open+Sans:400,300,400italic|Bitter);
+
 
 
 // Our variables
