--- a/css/main.scss
+++ b/css/main.scss
@@ -55,6 +55,7 @@ $on-laptop:        800px;
 header.site-header {
 	border: none;
 	z-index: 10;
+	background-color: #a2bdaf;
 }
 a.site-title {
 	font-family: "Bitter", serif;
