--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,15 @@
 <header class="site-header">
 
   <div class="wrapper">
-
-    <a class="site-title" href="{{ site.baseurl }}/">
+    <div class="site-title">
+      <a href="{{ site.baseurl }}/">
 	    <div class="line-1">made by</div>
 	    <div class="line"></div>
 	    <div class="line-2">Fred</div>
 	  </a>
-	  
-    <nav class="site-nav">
+	</div>
+    <!--
+<nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
           <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
@@ -25,6 +26,7 @@
         {% endfor %}
       </div>
     </nav>
+-->
 
   </div>
 
