fixed logo margins

--- a/css/main.scss
+++ b/css/main.scss
@@ -60,7 +60,7 @@ header.site-header {
 	border: none;
 	z-index: 10;
 /* 	background-color: #a2bdaf; */
-	padding: 3em 0;
+	padding: 3em 2em 0;
 }
 .site-title {	
 	float: none;
@@ -175,7 +175,7 @@ footer.site-footer {
 }
 .intro {
 	font-size: 1.5em;
-	margin: 2em 0;
+	margin: 1.5em 0;
 }
 .contact {
 	background-color: #efefef;
