comment out homepage specific styles at bottom of SCSS file

--- a/css/main.scss
+++ b/css/main.scss
@@ -173,6 +173,7 @@ footer.site-footer {
 }
 
 /* Homepage */
+/*
 .about {
 	font-size: 1.5em;
 }
@@ -187,3 +188,4 @@ footer.site-footer {
 	font-size: 1.2em;
 	padding: .5em;
 }
+*/
