updated portfolio section and index

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,16 +3,10 @@
 
   {% include head.html %}
 
-  <body>
-  	<header class="home-header">
-    	<div class="name">
-			Frederik Van Geloven
-		</div>
-	    <div class="description">is a
-	    <ul class="titles">
-		    <li>Creative Director +</li>			<li>Designer</li>
-		</ul>
-	</div>
+  <body class="home">
+
+    {% include header.html %}
+
     <div class="page-content">
         {{ content }}
     </div>
