--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -1,31 +1,48 @@
----
-layout: default
----
-<div class="portfolio">
-	<h2 class="content post-title">{{page.title}}</h2>
-	<img src="{{ page.banner_image }}" class="main-image" alt="{{ page.title }} banner image"/>
-  {{ content }}
-	<section id="feature1">
-  	<img src="{{ page.feature1_image }}" class="feature1-image" />
-    <div>
-      {{page.feature1_description}}
+<!DOCTYPE html>
+<html>
+
+  {% include head.html %}
+
+  <body style="background: linear-gradient(to right bottom, {{ page.portfolio_color }}, #EEEFED 30%, #bec0bb 95%);">
+    {% include header.html %}
+
+    <div class="page-content">
+      <div class="portfolio">
+        <h2 class="content post-title">{{page.title}}</h2>
+        <img src="{{ page.banner_image }}" class="main-image" alt="{{ page.title }} banner image"/>
+        {{ content }}
+        <section id="feature1">
+          <img src="{{ page.feature1_image }}" class="feature1-image" />
+          <div>
+            {{page.feature1_description}}
+          </div>
+	      </section>
+        <section id="feature2">
+          <div>
+            {{page.feature2_description}}
+          </div>
+          <img src="{{ page.feature2_image }}" class="feature2-image" />
+	      </section>
+      </div>
+      <nav class="post-navigation">
+        <ul>
+        {% if page.previous.url %}
+         <li class="prev"><a class="post-nav" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a></li>
+        {% else %}
+          <li class="prev">&nbsp;</li>
+        {% endif %}
+        <li class="overview"><a class="post-nav" href="/#portfolio">&raquo; Porfolio&nbsp;&laquo;</a></li>
+        {% if page.next.url %}
+        <li class="next"><a class="post-nav" href="{{page.next.url}}">{{page.next.title}}&nbsp;&raquo;</a></li>
+        {% else %}
+          <li class="next">&nbsp;</li>
+        {% endif %}
+        </ul>
+      </nav>
     </div>
-	</section>
- 	<section id="feature2">
-   	<div>
-      {{page.feature2_description}}
-    </div>
-  	<img src="{{ page.feature2_image }}" class="feature2-image" />
-	</section>
-</div>
-<nav class="post-navigation">
-  {% if page.previous.url %}
-    <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
-  {% else %}
-    <span class="prev">&nbsp;</span>
-  {% endif %}
-    <a class="overview" href="/#portfolio">&raquo; Porfolio &laquo;</a>
-  {% if page.next.url %}
-    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
-  {% endif %}
-</nav>
+
+    {% include footer.html %}
+
+  </body>
+
+</html>
