--- a/css/main.scss
+++ b/css/main.scss
@@ -93,7 +93,9 @@ h2 {
   font-weight: 800;
   text-transform: uppercase;
 }
-
+.img-circle {
+  border-radius:50%;
+}
 .page-content {
 	padding: 0;
 	margin: 0;
@@ -137,7 +139,7 @@ section#profile {
 //     margin-top: .2em;
     margin-bottom: .2em;
   }
-	.info {  	
+	.info {
     @include span-columns(9);
     @include shift(.5);
 	}
@@ -170,11 +172,11 @@ section#profile {
 @keyframes type {
   0%{width: 0;}
   30%{width: 0;}
-  100%{ width: 100;} 
-} 
+  100%{ width: 100;}
+}
 
 section#portfolio, section#experience, section#education, section#skills, section#personal, section#contact {
-  @include outer-container; 
+  @include outer-container;
   margin-left: auto;
   margin-right: auto;
 	ul {
@@ -194,15 +196,15 @@ section#experience, section#education, section#skills, section#personal, section
 		}
   }
 }
+
 section#portfolio {
 
   h2 {
-    display: none;
 //     @include span-columns(4);
-    font-size: 2em;
-    padding: 0;
-    line-height: .75em;
-    color: $dark-blue;  
+    // font-size: 2em;
+    // padding: 0;
+    // line-height: .75em;
+    // color: $dark-blue;
 //     margin-bottom: 1em;
     }
   ul {
@@ -292,7 +294,7 @@ div.portfolio {
       text-align: center;
       padding: 1em .5em;
       list-style: none;
-      height: 100%;   
+      height: 100%;
     }
   }
   a {
@@ -323,7 +325,7 @@ div.portfolio {
     font-size: 1em;
     ul {
       li {
-        padding: 1em .25em;    
+        padding: 1em .25em;
       }
     }
   }
@@ -337,7 +339,7 @@ div.portfolio {
   }
   .post-navigation {
     font-size: .9em;
-  }  
+  }
 }
 @media (max-width: 800px) {
   h2.page-title {
@@ -374,15 +376,15 @@ div.portfolio {
     #feature2 div {
       font-size: 1.2em;
     }
-  } 
+  }
   .post-navigation {
     font-size: .8em;
-  }  
-} 
-@media (max-width: 600px) { 
+  }
+}
+@media (max-width: 600px) {
   section#portfolio {
     ul li {
-      @include span-columns(12); 
+      @include span-columns(12);
     }
   }
   div.portfolio {
@@ -403,20 +405,219 @@ div.portfolio {
   }
   .post-navigation {
     font-size: .7em;
-  }    
+  }
+}
+/* SKILLS SECTION */
+.timeline {
+    position: relative;
+    padding: 0;
+    list-style: none;
 }
 
+.timeline:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 40px;
+    width: 2px;
+    margin-left: -1.5px;
+    background-color: #f1f1f1;
+}
+
+.timeline>li {
+    position: relative;
+    margin-bottom: 50px;
+    min-height: 50px;
+}
+
+.timeline>li:before,
+.timeline>li:after {
+    content: " ";
+    display: table;
+}
+
+.timeline>li:after {
+    clear: both;
+}
+
+.timeline>li .timeline-panel {
+    float: right;
+    position: relative;
+    width: 100%;
+    padding: 0 20px 0 100px;
+    text-align: left;
+}
+
+.timeline>li .timeline-panel:before {
+    right: auto;
+    left: -15px;
+    border-right-width: 15px;
+    border-left-width: 0;
+}
+
+.timeline>li .timeline-panel:after {
+    right: auto;
+    left: -14px;
+    border-right-width: 14px;
+    border-left-width: 0;
+}
+
+.timeline>li .timeline-image {
+    z-index: 100;
+    position: absolute;
+    left: 0;
+    width: 80px;
+    height: 80px;
+    margin-left: 0;
+    border: 7px solid #f1f1f1;
+    border-radius: 100%;
+    text-align: center;
+    color: #fff;
+}
+
+.timeline>li .timeline-image h4 {
+    margin-top: 12px;
+    font-size: 10px;
+    line-height: 14px;
+}
+
+.timeline>li.timeline-inverted>.timeline-panel {
+    float: right;
+    padding: 0 20px 0 100px;
+    text-align: left;
+}
+
+.timeline>li.timeline-inverted>.timeline-panel:before {
+    right: auto;
+    left: -15px;
+    border-right-width: 15px;
+    border-left-width: 0;
+}
+
+.timeline>li.timeline-inverted>.timeline-panel:after {
+    right: auto;
+    left: -14px;
+    border-right-width: 14px;
+    border-left-width: 0;
+}
+
+.timeline>li:last-child {
+    margin-bottom: 0;
+}
+
+.timeline .timeline-heading h4 {
+    margin-top: 0;
+    color: inherit;
+}
+
+.timeline .timeline-heading h4.subheading {
+    text-transform: none;
+}
+
+.timeline .timeline-body>p,
+.timeline .timeline-body>ul {
+    margin-bottom: 0;
+}
+
+@media(min-width:768px) {
+    .timeline:before {
+        left: 50%;
+    }
+
+    .timeline>li {
+        margin-bottom: 100px;
+        min-height: 100px;
+    }
+
+    .timeline>li .timeline-panel {
+        float: left;
+        width: 41%;
+        padding: 0 20px 20px 30px;
+        text-align: right;
+    }
+
+    .timeline>li .timeline-image {
+        left: 50%;
+        width: 100px;
+        height: 100px;
+        margin-left: -50px;
+    }
+
+    .timeline>li .timeline-image h4 {
+        margin-top: 16px;
+        font-size: 13px;
+        line-height: 18px;
+    }
+
+    .timeline>li.timeline-inverted>.timeline-panel {
+        float: right;
+        padding: 0 30px 20px 20px;
+        text-align: left;
+    }
+}
+
+@media(min-width:992px) {
+    .timeline>li {
+        min-height: 150px;
+    }
+
+    .timeline>li .timeline-panel {
+        padding: 0 20px 20px;
+    }
+
+    .timeline>li .timeline-image {
+        width: 150px;
+        height: 150px;
+        margin-left: -75px;
+    }
+
+    .timeline>li .timeline-image h4 {
+        margin-top: 30px;
+        font-size: 18px;
+        line-height: 26px;
+    }
+
+    .timeline>li.timeline-inverted>.timeline-panel {
+        padding: 0 20px 20px;
+    }
+}
+
+@media(min-width:1200px) {
+    .timeline>li {
+        min-height: 170px;
+    }
+
+    .timeline>li .timeline-panel {
+        padding: 0 20px 20px 100px;
+    }
+
+    .timeline>li .timeline-image {
+        width: 170px;
+        height: 170px;
+        margin-left: -85px;
+    }
+
+    .timeline>li .timeline-image h4 {
+        margin-top: 40px;
+    }
+
+    .timeline>li.timeline-inverted>.timeline-panel {
+        padding: 0 100px 20px 20px;
+    }
+}
+
+
 /* TEST NEAT */
-div.test {
+#skills {
   @include outer-container;
-  height: 800px;
   max-width: 1200px;
   margin: 0 auto;
-  div {
-    @include span-columns(3);
-    @include omega(4n);
-    background-color: $background-color;
-    margin-bottom: 1em;
+  .timeline-panel {
+    @include span-columns(5);
   }
-  
+  .timeline-inverted .timeline-panel {
+    @include span-columns(5);
+    @include shift(7);
+  }
 }
